tests/invalid/type/super_method_missing.pts
prototype A {
}

prototype B : A {
    function touch() : void {
        super.missing();
    }
}
